fixed Redis support

--- a/views/share.jade
+++ b/views/share.jade
@@ -2,12 +2,12 @@ doctype html
 html(lang="en")
 head
   include head.jade
-  script(src="https://cdn.jsdelivr.net/pouchdb/5.2.1/pouchdb.min.js")
+  script(src="/socket.io/socket.io.js")
   script(src="/js/logshare.js")
 body
   include nav.jade
 
-  script var dburl="#{dburl}";
+  script var logshareid="#{id}";
   
   div.container-fluid.logs
    
