--- a/views/index.jade
+++ b/views/index.jade
@@ -32,7 +32,7 @@ body
     div &nbsp;
         
     div         
-      img.img-responsive(src="https://github.com/glynnbird/logshare/raw/master/public/img/demo.gif")
+      img.img-responsive(src="https://raw.githubusercontent.com/glynnbird/logshare-server/master/public/img/demo.gif")
 
     div &nbsp;
     
