--- a/views/index.jade
+++ b/views/index.jade
@@ -4,17 +4,12 @@ head
   include head.jade
 body
 
-  div.container
-    div.header
-      h3.text-muted
+  div.world
+    div.logsharelogo
+    div.title Logshare  
+    div.subtitle Quickly share streaming log data with your colleagues
       
-    div.jumbotron
-      h1 logshare
-      p.lead Quickly share streaming log data with your colleagues
-      p.clearfix 
-      
-      div#error
-      
+  div.container.gap
     h2 Installation
     
     pre > npm install -g logshare
