--- a/views/share.jade
+++ b/views/share.jade
@@ -4,7 +4,7 @@ head
   include head.jade
   script(src="/socket.io/socket.io.js")
   script(src="/js/logshare.js")
-body
+body.room
   include nav.jade
 
   script var logshareid="#{id}";
