--- a/views/nav.jade
+++ b/views/nav.jade
@@ -1,5 +1,6 @@
-nav.navbar.navbar-inverse.navbar-fixed-top(role="navigation")
+nav.navbar.navbar-fixed-top.offblack(role="navigation")
   div.container
     div.navbar-header.hidden-xs.hidden-sm
-      a.navbar-brand(href="/") Logshare
+      a.navbar-brand(href="/") 
+        img(src="/img/logsharelogo.png")
       
