--- a/public/css/logshare.css
+++ b/public/css/logshare.css
@@ -47,10 +47,11 @@
   margin-left: 100px;
   color: #999;
   font-size: 20px;
-  font-weight: bold;
+  font-weight: 300;
 }
 
 h2 {
   padding-top:40px;
   color: #999;
+  font-size: 24px
 }
